# UU_BSc_Geosciences_Data2

./: .Rhistory  .gitignore  README.md  pyproject.toml  renderNotebooks.sh
01_startingPandas/: startingPandas.html  startingPandas.md  startingPandas.qmd
01_starting_Pandas/: startingPandas.html  startingPandas.md  startingPandas.qmd
02_Getting_started/: GettingStarted.html  GettingStarted.md  GettingStarted.qmd
02_Visualization/: plottingData.qmd
02_gettingStarted/: gettingStarted.html  gettingStarted.md
03_Distributions/: distributions.html  distributions.qmd
03_Visualization/: plottingData.html  plottingData.md  plottingData.qmd
03_plottingData/: plottingData.html  plottingData.md  plottingData.qmd
04_Distributions/: distributions.md  distributions.qmd
04_Getting_started/: GettingStarted.md  GettingStarted.qmd
04_distributionsData/: distributionsData.html  distributionsData.md  distributionsData.qmd
05_DataWrangling/: tidyData.py  tidyData.qmd
09_Linear_regression/: Linear_regression.md  Linear_regression.qmd
10_starting_Pandas/: startingPandas.html  startingPandas.md  startingPandas.qmd
11_Autoregressive_processes/: Autocorrelation_lecture.qmd  Autoregressive_processes.md  Autoregressive_processes.qmd
11_Getting_started/: GettingStarted.html  GettingStarted.md  GettingStarted.qmd  GettingStarted.quarto_ipynb
12_Autocorrelation/: Autocorrelation.md  Autocorrelation.qmd
12_Visualization/: plottingData.md  plottingData.qmd
13_Distributions/: distributions.md  distributions.qmd
15_Clustering/: Clustering.html
Data/: dailyDischarge.csv  (+7 more)
(+12 files in other folders)
