[tool.poetry]
name = "uu-bsc-geosciences-data2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "uu_bsc_geosciences_data2"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
ipykernel = "^6.29.4"
pyyaml = "^6.0.1"
nbformat = "^5.10.4"
nbclient = "^0.10.0"
jupyter = "^1.0.0"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
